fix error causing overflow

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,13 +1,16 @@
-.spanStyle {
-    padding: '20px';
-    background-color: '#efefef';
-    color: '#000000'
-  }
+.container {
+  flex-direction: column;
+  gap: 40px;
+}
   
-.divStyle {
-    display: 'flex';
-    align-items: 'center';
-    justify-content: 'center';
-    background-size: 'cover';
-    height: '400px'
+  .span {
+    font-size: 22px;
+    width: 70%;
+  }
+
+  .btn1 {
+    background-color: rgb(253, 86, 26);
+    padding: 15px 20px;
+    border-radius: 12px;
+    border: none;
   }
